--- a/workflow/envs/mparty.yaml
+++ b/workflow/envs/mparty.yaml
@@ -2,46 +2,47 @@ name: thesis
 channels:
   - bioconda
   - conda-forge
+  - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
   - aioeasywebdav=2.4.0=py36h5fab9bb_1001
   - aiohttp=3.7.4.post0=py36h8f6f2f9_0
-  - alabaster=0.7.12=py_0
+  - alabaster=0.7.12=py36_0
   - alsa-lib=1.2.3.2=h166bdaf_0
   - amply=0.1.5=pyhd8ed1ab_0
   - anndata=0.7.6=py36h5fab9bb_0
-  - appdirs=1.4.4=pyh9f0ad1d_0
+  - appdirs=1.4.4=pyhd3eb1b0_0
   - argtable2=2.13=h14c3975_1001
   - async-timeout=3.0.1=py_1000
   - atk-1.0=2.36.0=h3371d22_4
   - attmap=0.13.2=pyhd8ed1ab_0
-  - attrs=21.4.0=pyhd8ed1ab_0
-  - babel=2.10.1=pyhd8ed1ab_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - bcrypt=3.2.0=py36h8f6f2f9_1
-  - biopython=1.78=py36h8f6f2f9_2
+  - attrs=21.4.0=pyhd3eb1b0_0
+  - babel=2.9.1=pyhd3eb1b0_0
+  - backports=1.1=pyhd3eb1b0_0
+  - backports.functools_lru_cache=1.6.4=pyhd3eb1b0_0
+  - bcrypt=3.2.0=py36h7b6447c_0
+  - biopython=1.78=py36h7f8727e_0
   - blast=2.12.0=hf3cf87c_4
   - blast-legacy=2.2.26=h9ee0642_3
   - blosc=1.21.1=h83bc5f7_2
   - boost-cpp=1.74.0=h312852a_4
-  - boto3=1.21.21=pyhd8ed1ab_0
-  - botocore=1.24.21=pyhd8ed1ab_0
-  - brotlipy=0.7.0=py36h8f6f2f9_1001
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2021.10.8=ha878542_0
-  - cached-property=1.5.2=hd8ed1ab_1
+  - boto3=1.21.32=pyhd3eb1b0_0
+  - botocore=1.24.32=pyhd3eb1b0_0
+  - brotlipy=0.7.0=py36h27cfd23_1003
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.18.1=h7f8727e_0
+  - ca-certificates=2022.07.19=h06a4308_0
+  - cached-property=1.5.2=py_0
   - cached_property=1.5.2=pyha770c72_1
-  - cachetools=5.0.0=pyhd8ed1ab_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
   - cairo=1.16.0=h6cf1ce9_1008
   - cd-hit=4.8.1=h5b5514e_6
-  - certifi=2021.5.30=py36h5fab9bb_0
+  - certifi=2020.6.20=pyhd3eb1b0_3
   - cffi=1.14.6=py36hd8eec40_1
-  - chardet=4.0.0=py36h5fab9bb_1
-  - charset-normalizer=2.0.12=pyhd8ed1ab_0
-  - cloudpickle=2.0.0=pyhd8ed1ab_0
+  - chardet=4.0.0=py36h06a4308_1003
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cloudpickle=2.0.0=pyhd3eb1b0_0
   - clustalo=1.2.4=h87f3376_5
   - clustalw=2.1=h9f5acd7_7
   - coin-or-cbc=2.10.8=h3786ebc_0
@@ -50,176 +51,178 @@ dependencies:
   - coin-or-osi=0.108.7=h3b589db_0
   - coin-or-utils=2.11.6=h573740c_0
   - coincbc=2.10.8=0_metapackage
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - configargparse=1.5.3=pyhd8ed1ab_0
+  - colorama=0.4.4=pyhd3eb1b0_0
+  - configargparse=1.4=pyhd3eb1b0_0
   - connection_pool=0.0.3=pyhd3deb0d_0
   - consan=1.2=hec16e2b_3
   - cryptography=35.0.0=py36hb60f036_0
-  - curl=7.83.1=h7bff187_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - datrie=0.8.2=py36h8f6f2f9_2
+  - curl=7.82.0=h7f8727e_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - datrie=0.8.2=py36h27cfd23_0
   - dbus=1.13.6=h5008d03_3
   - dca=0.3.4=pyhdfd78af_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
   - dendropy=4.5.2=pyh3252c3a_0
   - dialign-tx=1.0.2=hec16e2b_5
   - diamond=2.0.15=hb97b32f_0
-  - docutils=0.17.1=py36h5fab9bb_0
-  - dropbox=11.30.0=pyhd8ed1ab_0
+  - docutils=0.17.1=py36h06a4308_1
+  - dropbox=11.14.0=py36h06a4308_0
   - dunamai=1.12.0=pyhd8ed1ab_0
   - entrez-direct=16.2=he881be0_0
-  - expat=2.4.8=h27087fc_0
+  - et_xmlfile=1.1.0=py36h06a4308_0
+  - expat=2.4.9=h6a678d5_0
   - fftw=3.3.10=nompi_h77c792f_102
   - filechunkio=1.8=py_2
-  - filelock=3.4.1=pyhd8ed1ab_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
+  - filelock=3.0.10=py36_0
+  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+  - font-ttf-inconsolata=2.001=hcb22688_0
+  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
+  - font-ttf-ubuntu=0.83=h8b1ccd4_0
   - fontconfig=2.14.0=h8e229c2_0
-  - fonts-conda-ecosystem=1=0
+  - fonts-anaconda=1=h8fa9717_0
+  - fonts-conda-ecosystem=1=hd3eb1b0_0
   - fonts-conda-forge=1=0
-  - freetype=2.10.4=h0708190_1
-  - fribidi=1.0.10=h36c2ea0_0
+  - freetype=2.11.0=h70c0345_0
+  - fribidi=1.0.10=h7b6447c_0
   - ftputil=5.0.4=pyhd8ed1ab_0
-  - future=0.18.2=py36h5fab9bb_3
-  - gdbm=1.18=h0a1914f_2
+  - future=0.18.2=py36_1
+  - gdbm=1.18=hd4cb3f1_0
   - gdk-pixbuf=2.42.8=hff1cb4f_0
   - get_version=3.2=pyhd8ed1ab_0
-  - gettext=0.19.8.1=h73d1719_1008
+  - gettext=0.21.0=hf68c758_0
   - ghostscript=9.54.0=h27087fc_2
-  - giflib=5.2.1=h36c2ea0_2
-  - gitdb=4.0.9=pyhd8ed1ab_0
-  - gitpython=3.1.18=pyhd8ed1ab_0
-  - gmp=6.2.1=h58526e2_0
+  - giflib=5.2.1=h7b6447c_0
+  - gitdb=4.0.7=pyhd3eb1b0_0
+  - gitpython=3.1.18=pyhd3eb1b0_1
+  - gmp=6.2.1=h295c915_3
   - google-api-core=2.7.1=pyhd8ed1ab_0
   - google-api-python-client=2.47.0=pyhd8ed1ab_0
-  - google-auth=2.6.6=pyh6c4a22f_0
+  - google-auth=2.6.0=pyhd3eb1b0_0
   - google-auth-httplib2=0.1.0=pyhd8ed1ab_0
-  - google-cloud-core=2.2.2=pyh6c4a22f_0
+  - google-cloud-core=2.2.2=pyhd3eb1b0_0
   - google-cloud-storage=2.1.0=pyh6c4a22f_0
-  - google-crc32c=1.1.2=py36h0208b43_0
-  - google-resumable-media=2.1.0=pyh6c4a22f_0
-  - googleapis-common-protos=1.53.0=py36h5fab9bb_0
-  - graphite2=1.3.13=h58526e2_1001
+  - google-crc32c=1.1.2=py36h27cfd23_0
+  - google-resumable-media=1.3.1=pyhd3eb1b0_1
+  - googleapis-common-protos=1.53.0=py36h06a4308_0
+  - graphite2=1.3.14=h295c915_1
   - graphviz=2.50.0=h85b4f2f_1
   - grpcio=1.38.1=py36h8e87921_0
   - gst-plugins-base=1.18.5=hf529b03_3
   - gstreamer=1.18.5=h9f60fe5_3
   - gtk2=2.24.33=h539f30e_1
   - gts=0.7.6=h64030ff_2
-  - h5py=3.1.0=nompi_py36hc1bc4f5_100
+  - h5py=2.10.0=py36hd6299e0_1
   - harfbuzz=2.9.1=h83ec7ef_1
   - hdf5=1.10.6=nompi_h6a2412b_1114
   - hmmer=3.3.2=h87f3376_2
   - httplib2=0.20.4=pyhd8ed1ab_0
   - hyperopt=0.2.7=pyhd8ed1ab_0
-  - icu=68.2=h9c3ff4c_0
-  - idna=3.3=pyhd8ed1ab_0
-  - idna_ssl=1.1.0=pyhd8ed1ab_1002
+  - icu=68.1=h2531618_0
+  - idna=3.3=pyhd3eb1b0_0
+  - idna_ssl=1.1.0=py36h06a4308_0
   - imagemagick=7.1.0_27=pl5321hae5efcc_0
-  - imagesize=1.3.0=pyhd8ed1ab_0
+  - imagesize=1.3.0=pyhd3eb1b0_0
   - importlib-metadata=4.8.1=py36h5fab9bb_0
-  - importlib_metadata=4.8.1=hd8ed1ab_1
-  - iniconfig=1.1.1=pyh9f0ad1d_0
-  - ipython_genutils=0.2.0=py_1
-  - jbig=2.1=h7f98852_2003
-  - jinja2=3.0.3=pyhd8ed1ab_0
-  - jmespath=0.10.0=pyh9f0ad1d_0
-  - joblib=1.1.0=pyhd8ed1ab_0
-  - jpeg=9e=h166bdaf_1
-  - jsonschema=4.1.2=pyhd8ed1ab_0
-  - jupyter_core=4.8.1=py36h5fab9bb_0
+  - importlib_metadata=1.5.0=py36_0
+  - iniconfig=1.1.1=pyhd3eb1b0_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - jbig=2.1=hdba287a_0
+  - jinja2=3.0.3=pyhd3eb1b0_0
+  - jmespath=0.10.0=pyhd3eb1b0_0
+  - joblib=0.13.2=py36_0
+  - jpeg=9e=h7f8727e_0
+  - jsonschema=3.2.0=pyhd3eb1b0_2
+  - jupyter_core=4.5.0=py_0
   - kalign2=2.04=hec16e2b_3
-  - keras=2.8.0=pyhd8ed1ab_0
+  - keras=2.6.0=pyhd3eb1b0_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.3.1=py36h605e78d_1
   - kopt=0.1.0=pyh145b6a8_2
-  - krb5=1.19.3=h3790be6_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - krb5=1.19.2=hac12032_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
   - legacy-api-wrap=1.2=py_0
-  - lerc=3.0=h9c3ff4c_0
+  - lerc=3.0=h295c915_0
   - libblas=3.9.0=14_linux64_openblas
   - libcblas=3.9.0=14_linux64_openblas
   - libclang=11.1.0=default_ha53f305_1
-  - libcrc32c=1.1.2=h9c3ff4c_0
-  - libcurl=7.83.1=h7bff187_0
+  - libcrc32c=1.1.1=he6710b0_2
+  - libcurl=7.82.0=h0b77cf5_0
   - libdeflate=1.10=h7f98852_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
+  - libedit=3.1.20210910=h7f8727e_0
+  - libev=4.33=h7f8727e_1
   - libevent=2.1.10=h9b69904_4
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=12.1.0=h8d9b700_16
-  - libgd=2.3.3=h6ad9fb6_0
-  - libgfortran-ng=12.1.0=h69a702a_16
-  - libgfortran5=12.1.0=hdcd56e2_16
+  - libffi=3.4.2=h295c915_4
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgd=2.3.3=h695aa2c_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
   - libglib=2.70.2=h174f98d_4
-  - libgomp=12.1.0=h8d9b700_16
-  - libiconv=1.16=h516909a_0
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
   - liblapack=3.9.0=14_linux64_openblas
   - liblapacke=3.9.0=14_linux64_openblas
-  - libllvm10=10.0.1=he513fc3_3
-  - libllvm11=11.1.0=hf817b99_3
-  - libnghttp2=1.47.0=h727a467_0
+  - libllvm10=10.0.1=hbcb73fb_5
+  - libllvm11=11.1.0=h9e868ea_6
+  - libnghttp2=1.46.0=hce63b2e_0
   - libnsl=2.0.0=h7f98852_0
-  - libogg=1.3.4=h7f98852_1
+  - libogg=1.3.5=h27cfd23_1
   - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.37=h21135ba_2
+  - libopus=1.3.1=h7b6447c_0
+  - libpng=1.6.37=hbc83047_0
   - libpq=13.5=hd57d9b9_1
   - libprotobuf=3.18.0=h780b84a_1
   - librsvg=2.52.5=hc3c00ef_1
-  - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.10.0=ha56f1ee_2
-  - libstdcxx-ng=12.1.0=ha89aaad_16
+  - libsodium=1.0.18=h7b6447c_0
+  - libssh2=1.10.0=h8f2d780_0
+  - libstdcxx-ng=11.2.0=h1234567_1
   - libtiff=4.3.0=h542a066_3
-  - libtool=2.4.6=h9c3ff4c_1008
+  - libtool=2.4.6=h295c915_1008
   - libuuid=2.32.1=h7f98852_1000
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libwebp=1.2.2=h3452ae3_0
-  - libwebp-base=1.2.2=h7f98852_1
+  - libvorbis=1.3.7=h7b6447c_0
+  - libwebp=1.2.4=h11a3e52_0
+  - libwebp-base=1.2.4=h5eee18b_0
   - libxcb=1.13=h7f98852_1004
   - libxkbcommon=1.0.3=he3ba5ed_0
   - libxml2=2.9.12=h72842e0_0
   - libzlib=1.2.11=h166bdaf_1014
   - llvmlite=0.36.0=py36h05121d2_0
   - logmuse=0.2.6=pyh8c360ce_0
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - lzo=2.10=h516909a_1000
+  - lz4-c=1.9.3=h295c915_1
+  - lzo=2.10=h7b6447c_2
   - mafft=7.310=h87f3376_5
-  - markupsafe=2.0.1=py36h8f6f2f9_0
+  - markupsafe=2.0.1=py36h27cfd23_0
   - matplotlib=3.3.4=py36h5fab9bb_0
   - matplotlib-base=3.3.4=py36hd391965_0
-  - mock=4.0.3=py36h5fab9bb_1
-  - more-itertools=8.13.0=pyhd8ed1ab_0
+  - mock=4.0.3=pyhd3eb1b0_0
+  - more-itertools=8.12.0=pyhd3eb1b0_0
   - multidict=5.2.0=py36h8f6f2f9_0
   - muscle=5.1=h9f5acd7_1
   - mustang=3.2.3=h2d50403_1
   - mysql-common=8.0.29=haf5c9bc_0
   - mysql-libs=8.0.29=h28c427c_0
-  - natsort=8.1.0=pyhd8ed1ab_0
-  - nbformat=5.1.3=pyhd8ed1ab_0
-  - ncurses=6.3=h27087fc_1
+  - natsort=7.1.1=pyhd3eb1b0_0
+  - nbformat=5.1.3=pyhd3eb1b0_0
+  - ncurses=6.3=h5eee18b_3
   - networkx=2.7.1=pyhd8ed1ab_0
-  - nspr=4.32=h9c3ff4c_1
-  - nss=3.77=h2350873_0
+  - nspr=4.33=h295c915_0
+  - nss=3.74=h0370c37_0
   - numba=0.53.1=py36h1328434_1
   - numexpr=2.7.3=py36h0cdc3f0_0
   - numpy=1.19.5=py36hfc0c790_2
   - oauth2client=4.1.3=py_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openjdk=11.0.9.1=h5cc2fde_1
-  - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1o=h166bdaf_0
-  - packaging=21.3=pyhd8ed1ab_0
+  - olefile=0.46=py36_0
+  - openjdk=8.0.152=h7b6447c_3
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=1.1.1q=h7f8727e_0
+  - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.1.5=py36h284efc9_0
   - pango=1.48.10=hb8ff022_1
-  - paramiko=2.10.4=pyhd8ed1ab_0
+  - paramiko=2.8.1=pyhd3eb1b0_0
   - pasta=1.7.8=py36h8c4c3a4_4
   - patsy=0.5.2=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
+  - pcre=8.45=h295c915_0
   - peppy=0.31.2=pyhd8ed1ab_2
   - perl=5.32.1=2_h7f98852_perl5
   - perl-archive-tar=2.40=pl5321hdfd78af_0
@@ -243,107 +246,108 @@ dependencies:
   - perl-types-serialiser=1.01=pl5321hdfd78af_0
   - phylip=3.697=h470a237_0
   - pillow=8.3.2=py36h676a545_0
-  - pip=21.3.1=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
-  - pkg-config=0.29.2=h36c2ea0_1008
-  - pluggy=1.0.0=py36h5fab9bb_1
-  - ply=3.11=py_1
+  - pip=21.2.2=py36h06a4308_0
+  - pixman=0.40.0=h7f8727e_1
+  - pkg-config=0.29.2=h1bed415_8
+  - plastedma=0.1.2=hdfd78af_0
+  - pluggy=1.0.0=py36h06a4308_0
+  - ply=3.11=py36_0
   - poa=2.0=hec16e2b_4
   - prank=v.170427=h9f5acd7_5
   - prettytable=2.5.0=pyhd8ed1ab_0
   - probcons=1.12=h8b12597_1
   - probconsrna=1.10=h9f5acd7_2
   - protobuf=3.18.0=py36hc4f0c31_0
-  - psutil=5.8.0=py36h8f6f2f9_1
-  - pthread-stubs=0.4=h36c2ea0_1001
+  - psutil=5.8.0=py36h27cfd23_1
+  - pthread-stubs=0.3=h0ce48e5_1
   - pulp=2.5.1=py36h5fab9bb_0
-  - py=1.11.0=pyh6c4a22f_0
-  - py4j=0.10.9.5=pyhd8ed1ab_0
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.12.0=pyhd8ed1ab_0
+  - py=1.11.0=pyhd3eb1b0_0
+  - py4j=0.10.9.2=pyhd3eb1b0_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
   - pygraphviz=1.6=py36he9cec78_1
-  - pymongo=3.12.0=py36hc4f0c31_0
+  - pymongo=3.12.0=py36h295c915_0
   - pynacl=1.4.0=py36h8f6f2f9_2
-  - pynndescent=0.5.7=pyh6c4a22f_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pynndescent=0.5.4=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyparsing=3.0.4=pyhd3eb1b0_0
   - pyqt=5.12.3=py36h5fab9bb_7
   - pyqt-impl=5.12.3=py36h7ec31b9_7
   - pyqt5-sip=4.19.18=py36hc4f0c31_7
   - pyqtchart=5.12=py36h7ec31b9_7
   - pyqtwebengine=5.12.1=py36h7ec31b9_7
   - pyrsistent=0.17.3=py36h8f6f2f9_2
-  - pysftp=0.2.9=py_1
-  - pysocks=1.7.1=py36h5fab9bb_3
+  - pysftp=0.2.9=pyhd3eb1b0_1
+  - pysocks=1.7.1=py36h06a4308_0
   - pytables=3.6.1=py36hb7ec5aa_3
   - pytest=6.2.5=py36h5fab9bb_0
   - python=3.6.15=hb7a2778_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-irodsclient=1.1.3=pyhd8ed1ab_0
   - python_abi=3.6=2_cp36m
-  - pytz=2022.1=pyhd8ed1ab_0
+  - pytz=2021.3=pyhd3eb1b0_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - pyyaml=5.4.1=py36h8f6f2f9_1
   - qt=5.12.9=hda022c4_4
   - ratelimiter=1.2.0=py_1002
-  - readline=8.1=h46c0cb4_0
-  - requests=2.27.1=pyhd8ed1ab_0
-  - rsa=4.8=pyhd8ed1ab_0
+  - readline=8.1.2=h7f8727e_1
+  - requests=2.27.1=pyhd3eb1b0_0
+  - rsa=4.7.2=pyhd3eb1b0_1
   - ruby=3.1.2=h22ca3a2_0
-  - s3transfer=0.5.2=pyhd8ed1ab_0
+  - s3transfer=0.5.0=pyhd3eb1b0_0
   - sap=1.1.3=hec16e2b_2
   - scanpy=1.7.2=pyhd8ed1ab_0
   - scikit-learn=0.24.2=py36hc89565f_1
   - scipy=1.5.3=py36h81d768a_1
-  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn=0.11.2=pyhd3eb1b0_0
   - seaborn-base=0.11.2=pyhd8ed1ab_0
   - setuptools=58.0.4=py36h5fab9bb_2
   - sinfo=0.3.1=py_0
-  - six=1.16.0=pyh6c4a22f_0
+  - six=1.16.0=pyhd3eb1b0_1
   - slacker=0.14.0=py_0
-  - smart_open=6.0.0=pyhd8ed1ab_0
-  - smmap=3.0.5=pyh44b312d_0
+  - smart_open=5.1.0=pyhd3eb1b0_0
+  - smmap=4.0.0=pyhd3eb1b0_0
   - snakemake=6.15.5=hdfd78af_0
   - snakemake-minimal=6.15.5=pyhdfd78af_0
-  - snappy=1.1.9=hbd366e4_0
-  - snowballstemmer=2.2.0=pyhd8ed1ab_0
-  - sphinx=4.5.0=pyh6c4a22f_0
-  - sphinxcontrib-applehelp=1.0.2=py_0
-  - sphinxcontrib-devhelp=1.0.2=py_0
-  - sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
-  - sphinxcontrib-jsmath=1.0.1=py_0
-  - sphinxcontrib-qthelp=1.0.3=py_0
-  - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
-  - sqlite=3.38.5=h4ff8645_0
+  - snappy=1.1.9=h295c915_0
+  - snowballstemmer=2.2.0=pyhd3eb1b0_0
+  - sphinx=4.4.0=pyhd3eb1b0_0
+  - sphinxcontrib-applehelp=1.0.2=pyhd3eb1b0_0
+  - sphinxcontrib-devhelp=1.0.2=pyhd3eb1b0_0
+  - sphinxcontrib-htmlhelp=2.0.0=pyhd3eb1b0_0
+  - sphinxcontrib-jsmath=1.0.1=pyhd3eb1b0_0
+  - sphinxcontrib-qthelp=1.0.3=pyhd3eb1b0_0
+  - sphinxcontrib-serializinghtml=1.1.5=pyhd3eb1b0_0
+  - sqlite=3.38.2=hc218d9a_0
   - statsmodels=0.12.2=py36he33b4a0_0
   - stdlib-list=0.7.0=py_2
-  - stone=3.3.1=pyhd8ed1ab_0
+  - stone=3.2.1=pyhd3eb1b0_0
   - stopit=1.1.2=py_0
   - t-coffee=13.45.0.4846264=he1b5a44_3
-  - tabulate=0.8.9=pyhd8ed1ab_0
+  - tabulate=0.8.9=py36h06a4308_0
   - tbb=2020.2=h4bd325d_4
-  - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tk=8.6.12=h27826a3_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
+  - tk=8.6.11=h1ccaba5_0
   - tmalign=20170708=h1107714_4
-  - toml=0.10.2=pyhd8ed1ab_0
+  - toml=0.10.2=pyhd3eb1b0_0
   - toposort=1.7=pyhd8ed1ab_0
-  - tornado=6.1=py36h8f6f2f9_1
-  - tqdm=4.64.0=pyhd8ed1ab_0
-  - traitlets=4.3.3=pyhd8ed1ab_2
-  - typing-extensions=4.1.1=hd8ed1ab_0
-  - typing_extensions=4.1.1=pyha770c72_0
+  - tornado=6.1=py36h27cfd23_0
+  - tqdm=4.63.0=pyhd3eb1b0_0
+  - traitlets=4.3.3=py36h06a4308_0
+  - typing-extensions=4.1.1=hd3eb1b0_0
+  - typing_extensions=4.1.1=pyh06a4308_0
   - ubiquerg=0.6.1=pyh9f0ad1d_0
   - umap-learn=0.5.1=py36h5fab9bb_1
   - upimapi=1.7.4=hdfd78af_0
   - uritemplate=4.1.1=pyhd8ed1ab_0
-  - urllib3=1.26.9=pyhd8ed1ab_0
+  - urllib3=1.26.8=pyhd3eb1b0_0
   - veracitools=0.1.3=py_0
   - viennarna=2.1.9=1
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - wrapt=1.13.1=py36h8f6f2f9_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - wrapt=1.12.1=py36h7b6447c_1
   - xorg-fixesproto=5.0=h7f98852_1002
   - xorg-inputproto=2.3.2=h7f98852_1002
   - xorg-kbproto=1.0.7=h7f98852_1002
@@ -361,11 +365,16 @@ dependencies:
   - xorg-recordproto=1.14.2=h7f98852_1002
   - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h7f98852_2
-  - yarl=1.6.3=py36h8f6f2f9_2
+  - xorg-xproto=7.0.31=h27cfd23_1007
+  - xz=5.2.6=h5eee18b_0
+  - yaml=0.2.5=h7b6447c_0
+  - yarl=1.6.3=py36h27cfd23_0
   - zipp=3.6.0=pyhd8ed1ab_0
   - zlib=1.2.11=h166bdaf_1014
   - zstd=1.5.2=ha95c52a_0
-prefix: /home/josepedro/mambaforge/envs/thesis
+  - pip:
+    - args==0.1.0
+    - clint==0.5.1
+    - et-xmlfile==1.1.0
+    - openpyxl==3.0.10
+prefix: /home/josepedro/anaconda3/envs/thesis
