--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,12 +1,232 @@
-database: uniprot
+60-65:
+- '1'
+- '9'
+- '12'
+- '13'
+- '19'
+- '21'
+- '23'
+- '26'
+- '28'
+- '29'
+- '33'
+- '36'
+- '39'
+- '42'
+- '43'
+- '44'
+- '46'
+- '47'
+- '50'
+- '53'
+- '54'
+- '59'
+- '61'
+- '63'
+- '64'
+- '65'
+- '66'
+- '68'
+- '70'
+- '73'
+- '74'
+- '77'
+- '80'
+- '82'
+- '83'
+- '85'
+- '88'
+- '91'
+- '94'
+- '95'
+- '98'
+- '100'
+- '101'
+- '102'
+- '103'
+- '104'
+- '105'
+- '106'
+- '107'
+- '108'
+- '113'
+- '117'
+- '119'
+- '121'
+- '122'
+- '126'
+- '128'
+- '129'
+- '134'
+- '136'
+- '139'
+- '144'
+- '145'
+- '148'
+- '151'
+- '152'
+- '153'
+- '155'
+- '156'
+- '157'
+- '159'
+- '160'
+- '162'
+- '163'
+- '164'
+- '174'
+- '185'
+- '189'
+- '191'
+- '193'
+- '194'
+- '196'
+- '206'
+- '207'
+- '208'
+- '209'
+- '223'
+- '224'
+- '228'
+- '230'
+- '231'
+- '240'
+- '243'
+- '259'
+- '262'
+- '267'
+- '272'
+- '273'
+65-70:
+- '1'
+- '3'
+- '6'
+- '7'
+- '9'
+- '10'
+- '11'
+- '12'
+- '13'
+- '19'
+- '20'
+- '21'
+- '22'
+- '23'
+- '24'
+- '25'
+- '26'
+- '27'
+- '28'
+- '29'
+- '30'
+- '33'
+- '34'
+- '43'
+- '45'
+- '48'
+- '50'
+- '51'
+- '52'
+- '53'
+- '56'
+- '66'
+- '70'
+- '72'
+- '76'
+- '81'
+- '86'
+- '99'
+- '102'
+- '103'
+- '109'
+- '111'
+- '114'
+- '115'
+- '125'
+70-75:
+- '2'
+- '3'
+- '4'
+- '5'
+- '6'
+- '7'
+- '8'
+- '9'
+- '10'
+- '11'
+- '12'
+- '13'
+- '14'
+- '18'
+- '21'
+- '24'
+- '26'
+- '27'
+- '29'
+- '31'
+- '51'
+75-80:
+- '1'
+- '2'
+- '3'
+- '4'
+- '5'
+- '7'
+- '8'
+- '9'
+- '10'
+- '11'
+- '12'
+- '15'
+- '16'
+- '18'
+- '20'
+- '21'
+- '24'
+- '32'
+- '35'
+- '37'
+- '40'
+- '45'
+- '49'
+- '54'
+80-85:
+- '1'
+- '3'
+- '4'
+- '8'
+- '10'
+- '11'
+- '12'
+- '13'
+- '15'
+- '16'
+- '22'
+- '23'
+- '24'
+- '26'
+- '27'
+- '28'
+- '29'
+- '30'
+- '32'
+- '34'
+- '41'
+- '44'
+85-90:
+- '1'
+- '3'
+- '5'
+- '10'
+database: UniProt
 hmm_database_name: PE
 hmmsearch_out_type: tsv
 input_file: sequences.fasta
 input_file_db_const: null
 input_type: protein
 metagenomic: false
-out_table_format: excel
-output_directory: output_results
+out_table_format: tsv
+output_directory: MPARTY_results
 seqids:
 - A0A1H6AD45
 - G9BY57
@@ -21,5 +241,5 @@ thresholds:
 - 75-80
 - 80-85
 - 85-90
-validation: false
-workflow: annotation
+validation: true
+workflow: database_construction
