--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -145,35 +145,35 @@ jobs:
       - name: Annotation workflow with gut metagenome proteins (negative dataset), add model validation workflow with POLYMERASE as CONTROL
         run: docker run mparty bin/bash -c "m-party.py -i M-PARTY/ci/gut_metagenome_proteins.fasta -it metagenome -o output_results -rt --output_type excel --validation --hmm_db_name PE --negative_db M-PARTY/ci/polymerase_DB.fasta"
 
-  # db_construction:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
+  db_construction:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-  #     - name: Download artifact
-  #       uses: actions/download-artifact@v2
-  #       with:
-  #         name: mparty
-  #         path: /tmp
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: mparty
+          path: /tmp
 
-  #     - name: Load Docker image
-  #       run: |
-  #         docker load --input /tmp/mparty.tar
-  #         docker image ls -a
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/mparty.tar
+          docker image ls -a
 
-  #     - name: Check base entrypoint
-  #       run: docker run mparty bin/bash -c "ls"
+      - name: Check base entrypoint
+        run: docker run mparty bin/bash -c "ls"
 
-  #     - name: Print M-PARTY's main script
-  #       run: docker run mparty bin/bash -c "m-party.py -h"
+      - name: Print M-PARTY's main script
+        run: docker run mparty bin/bash -c "m-party.py -h"
 
-      # - name: Database construction workflow with small FASTA protein file, WITHOUT model validation script
-      #   run: docker run mparty bin/bash -c "m-party.py -w database_construction -i M-PARTY/ci/sequences.fasta"
+      - name: Database construction workflow with small FASTA protein file, WITHOUT model validation script
+        run: docker run mparty bin/bash -c "m-party.py -w database_construction -i M-PARTY/ci/sequences.fasta --hmm_db_name PE -db swissprot --input_seqs_db_const ci/sequences.fasta"
       
       # - name: Database construction workflow with small FASTA protein file, WITH model validation script
-      #   run: docker run mparty bin/bash -c "m-party.py -w database_construction -i M-PARTY/ci/sequences.fasta --validation"
+      #   run: docker run mparty bin/bash -c "m-party.py -w database_construction --hmm_db_name PE -i M-PARTY/ci/sequences.fasta --validation"
       
       # - name: Full M-PARTY workflow execution!
       #   run: docker run mparty bin/bash -c "m-party.py -w both -i M-PARTY/ci/sequences.fasta -o output_results -rt --output_type excel --validation"
