--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         run: docker run mparty bin/bash -c "m-party.py -h"
 
       - name: Annotation workflow by FASTA input, report text creation and excel table format
-        run: docker run mparty bin/bash -c "m-party.py -i M-PARTY/ci/sequences.fasta -o output_results -rt --output_type excel --hmm_db_name PE"
+        run: docker run mparty bin/bash -c "m-party.py -i M-PARTY/ci/sequences_PE.fasta -o output_results -rt --output_type excel --hmm_db_name PE"
 
       - name: Annotation workflow with gut metagenome proteins (negative dataset), generate same outputs
         run: docker run mparty bin/bash -c "m-party.py -i M-PARTY/ci/gut_metagenome_proteins.fasta -it metagenome -o output_results -rt --output_type excel --hmm_db_name PE"
@@ -170,11 +170,11 @@ jobs:
         run: docker run mparty bin/bash -c "m-party.py -h"
 
       - name: Database construction workflow with small FASTA protein file, WITHOUT model validation script
-        run: docker run mparty bin/bash -c "m-party.py -w database_construction -i M-PARTY/ci/sequences.fasta --hmm_db_name PE -db swissprot --input_seqs_db_const ci/sequences.fasta"
+        run: docker run mparty bin/bash -c "m-party.py -w database_construction -i M-PARTY/ci/sequences_PE.fasta --hmm_db_name PE -db swissprot --input_seqs_db_const ci/sequences_PE.fasta"
       
       # - name: Database construction workflow with small FASTA protein file, WITH model validation script
-      #   run: docker run mparty bin/bash -c "m-party.py -w database_construction --hmm_db_name PE -i M-PARTY/ci/sequences.fasta --validation"
+      #   run: docker run mparty bin/bash -c "m-party.py -w database_construction --hmm_db_name PE -i M-PARTY/ci/_PE.fasta --validation"
       
       # - name: Full M-PARTY workflow execution!
-      #   run: docker run mparty bin/bash -c "m-party.py -w both -i M-PARTY/ci/sequences.fasta -o output_results -rt --output_type excel --validation"
+      #   run: docker run mparty bin/bash -c "m-party.py -w both -i M-PARTY/ci/sequences_PE.fasta -o output_results -rt --output_type excel --validation"
       
