CI opt and debug

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,214 +1,28 @@
 60-65:
-- '1'
-- '9'
-- '12'
-- '13'
-- '19'
-- '21'
-- '23'
-- '26'
-- '28'
-- '29'
-- '33'
-- '36'
-- '39'
-- '42'
-- '44'
-- '46'
-- '47'
-- '50'
-- '53'
-- '54'
-- '59'
-- '61'
-- '64'
-- '65'
-- '66'
-- '68'
-- '70'
-- '73'
-- '74'
-- '77'
-- '80'
-- '82'
-- '83'
-- '85'
-- '88'
-- '94'
-- '95'
-- '98'
-- '100'
-- '101'
-- '102'
-- '103'
-- '104'
-- '105'
-- '106'
-- '107'
-- '108'
-- '113'
-- '117'
-- '119'
-- '121'
-- '122'
-- '126'
-- '128'
-- '129'
-- '134'
-- '136'
-- '139'
-- '143'
-- '144'
-- '147'
-- '150'
-- '151'
-- '152'
-- '154'
-- '156'
-- '158'
-- '159'
-- '161'
-- '162'
-- '163'
-- '173'
-- '184'
-- '188'
-- '190'
-- '192'
-- '193'
-- '195'
-- '205'
-- '208'
-- '223'
-- '229'
-- '230'
-- '242'
-- '257'
-- '260'
-- '265'
-- '271'
-65-70:
-- '1'
-- '3'
-- '6'
-- '7'
-- '10'
-- '11'
-- '12'
-- '13'
-- '19'
-- '20'
-- '21'
-- '22'
-- '23'
-- '24'
-- '25'
-- '26'
-- '27'
-- '28'
-- '29'
-- '30'
-- '33'
-- '34'
-- '43'
-- '45'
-- '48'
-- '50'
-- '51'
-- '52'
-- '53'
-- '56'
-- '66'
-- '70'
-- '72'
-- '85'
-- '98'
-- '101'
-- '102'
-- '108'
-- '110'
-- '113'
-- '114'
-70-75:
 - '2'
-- '3'
-- '4'
-- '5'
-- '6'
-- '7'
-- '8'
-- '9'
-- '10'
-- '11'
-- '12'
-- '13'
-- '18'
-- '21'
-- '24'
-- '26'
-- '27'
-- '29'
-- '31'
-- '51'
 75-80:
 - '1'
-- '2'
-- '4'
-- '5'
-- '7'
-- '10'
-- '11'
-- '12'
-- '15'
-- '16'
-- '18'
-- '20'
-- '21'
-- '24'
-- '32'
-- '37'
-- '40'
-- '49'
-- '54'
 80-85:
 - '1'
-- '3'
-- '4'
-- '8'
-- '10'
-- '11'
-- '12'
-- '13'
-- '15'
-- '16'
-- '22'
-- '23'
-- '27'
-- '28'
-- '29'
-- '32'
-- '34'
-- '41'
-85-90:
-- '1'
-- '10'
+alignment_method: diamond
+concat_models: true
 database: swissprot
-hmm_database_name: PE
+hmm_database_name: PET
 hmmsearch_out_type: tsv
 input_file: null
-input_file_db_const: ci/sequences.fasta
+input_file_db_const: ci/sequences_PET.fasta
 input_type: protein
 metagenomic: false
+msa_aligner: tcoffee
 out_table_format: excel
-output_directory: M-PARTY_testing
+output_directory: MPARTY_results
+overwrite: false
 seqids: []
-threads: 1
+threads: 8
 thresholds:
 - 60-65
-- 65-70
-- 70-75
 - 75-80
 - 80-85
-- 85-90
 validation: true
+verbose: true
 workflow: database_construction
