--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,28 +1,25 @@
-60-65:
-- '2'
-75-80:
-- '1'
-80-85:
-- '1'
 alignment_method: diamond
 concat_models: true
-database: swissprot
+database: UniProt
 hmm_database_name: PET
 hmmsearch_out_type: tsv
 input_file: null
-input_file_db_const: ci/sequences_PET.fasta
+input_file_db_const: null
 input_type: protein
 metagenomic: false
 msa_aligner: tcoffee
-out_table_format: excel
-output_directory: MPARTY_results
+out_table_format: tsv
+output_directory: null
 overwrite: false
 seqids: []
 threads: 8
 thresholds:
 - 60-65
+- 65-70
+- 70-75
 - 75-80
 - 80-85
+- 85-90
 validation: true
 verbose: true
-workflow: database_construction
+workflow: annotation
