--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,25 +1,26 @@
-alignment_method: diamond
+alignment_method: upimapi
 concat_models: true
-database: UniProt
-hmm_database_name: PET
+database: swissprot
+hmm_database_name: testing_with_UniP
 hmmsearch_out_type: tsv
 input_file: null
-input_file_db_const: null
+input_file_db_const: ci/sequences_PE.fasta
 input_type: protein
 metagenomic: false
 msa_aligner: tcoffee
 out_table_format: tsv
-output_directory: null
+output_directory: MPARTY_results
 overwrite: false
 seqids: []
-threads: 8
+threads: 4
 thresholds:
-- 60-65
-- 65-70
-- 70-75
-- 75-80
-- 80-85
-- 85-90
+- 60
+- 65
+- 70
+- 75
+- 80
+- 85
+- 90
 validation: true
 verbose: true
-workflow: annotation
+workflow: database_construction
