--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -75,18 +75,24 @@ rule hmmbuild:
 #  			f.write("sucess!")
 
 
-# files = {threshold: glob(f"resources/Data/FASTA/CDHIT/{threshold}/*.fasta") for threshold in config["thresholds"]}
+# files = {threshold: glob(f"resources/Data/FASTA/{db_name}/CDHIT/{threshold}/*.fasta") for threshold in config["thresholds"]}
+# print(list(files.keys()))
 # threshold2clusters = {k : [v.split("/")[-1].split("\\")[-1].split('.f')[0] for v in values] for k, values in files.items()}
 
 # from scripts.snakemake_util import cat_hmms_input
 
-def cat_hmms_input(wildcards):
-	return expand("resources/Data/HMMs/{db}/After_tcoffee_UPI/{threshold}/{cluster}.hmm", db=db_name, threshold=wildcards, cluster=config[wildcards]) # threshold2clusters[wildcards])
+# def cat_hmms_input(wildcards):
+# 	return expand("resources/Data/HMMs/{db}/After_tcoffee_UPI/{threshold}/{cluster}.hmm", db=db_name, threshold=wildcards, cluster=config[wildcards]) # threshold2clusters[wildcards])
 
+# def cat_hmms_input():
+
+# 	return list_files
 
 rule cat_hmms:
 	input:
-	    lambda wildcards: cat_hmms_input(wildcards.threshold)
+	    ["resources/Data/HMMs/{db}/After_tcoffee_UPI/{threshold}/{cluster}.hmm".format(db=db_name, threshold=config["thresholds"][x], 
+		cluster=config[config["thresholds"][x]][y]) for x in range(len(config["thresholds"])) for y in range(len(config[config["thresholds"][x]]))]
+		# lambda wildcards: cat_hmms_input(wildcards.threshold)
 	output:
 		"resources/Data/HMMs/{db}/After_tcoffee_UPI/{threshold}.hmm"
 	threads: config["threads"]
