--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,22 +1,22 @@
 InterPro_ID: null
 KEGG_ID:
-- K21104
+- 3.1.1.3
 alignment_method: upimapi
 concat_models: true
 consensus: false
 database: UniProt
 expansion: false
-hmm_database_name: KEGG_21104
-hmm_validation: true
+hmm_database_name: ec3113
+hmm_validation: false
 hmmsearch_out_type: tsv
 input_file: null
 input_file_db_const: null
-input_type: protein
-metagenomic: false
+input_type: null
+metagenomic: true
 msa_aligner: tcoffee
 out_table_format: tsv
 output_directory: MPARTY_results
-overwrite: false
+overwrite: true
 seqids: []
 threads: 12
 thresholds: false
